[workspace]

members = [
    "cli",
    "logger",
]

# This prevents a Travis CI error when building for Windows.
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Developers <developers@bbachain.com>"]
repository = "https://github.com/bbachain/bbachain"
homepage = "https://bbachain.com/"
license = "Apache-2.0"
edition = "2021"

[workspace.dependencies]
bbachain-logger = { path = "logger", version = "=0.1.0" }
env_logger = "0.9.3"
lazy_static = "1.4.0"
log = "0.4.20"
thiserror = "1.0.50"
